overflow:hidden removed->prevents scroll

--- a/src/app/competition/competition.component.css
+++ b/src/app/competition/competition.component.css
@@ -1,5 +1,5 @@
 .container {
-  border: 1px solid green;
+  border: 1px solid gray;
 }
 
 input.ng-invalid.ng-touched,
