--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,5 @@
 * {
   box-sizing: border-box;
   /* quick solution to hide overflow */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
